--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     </div>
     <div class = "Groceries">
         <div id = "milk">
-            <img src="https://pngimg.com/d/milk_PNG12732.png" width="200px">
+            <img src="https://pngimg.com/d/milk_PNG12732.png" width="150px" height="200px">
+            <p>milk</p>
         </div>
         <div id = "eggs">
-            <img src="https://png.pngtree.com/png-vector/20231031/ourmid/pngtree-dozen-eggs-png-image_10388588.png" width="300px">
+            <img src="https://png.pngtree.com/png-vector/20231031/ourmid/pngtree-dozen-eggs-png-image_10388588.png" width="350px">
         </div>
         <div id = "banana">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Banana.png/800px-Banana.png" width="200px">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Banana.png/800px-Banana.png" width="150px">
+        </div>
         <div id = "bread">
-            <img src="https://static.vecteezy.com/system/resources/previews/028/296/840/original/toast-sliced-of-white-bread-on-transparent-background-png.png" width="240px">
+            <img src="https://static.vecteezy.com/system/resources/previews/028/296/840/original/toast-sliced-of-white-bread-on-transparent-background-png.png" width="300px">
         </div>
         <div id = "rice">
-            <img src="https://www.kroger.com/product/images/large/front/0004133102606" width="250px">
+            <img src="https://www.kroger.com/product/images/large/front/0004133102606" width="150px">
         </div>
         <div id = "flour">
-            <img src="https://www.pikpng.com/pngl/b/275-2757637_free-png-flour-png-png-image-with-transparent.png" width="300";
+            <img src="https://www.pikpng.com/pngl/b/275-2757637_free-png-flour-png-png-image-with-transparent.png" width="150";>
         </div>
 
     </div>
