--- a/index.html
+++ b/index.html
@@ -12,60 +12,58 @@
     <div id = "Banner">
         <h1> Fannys Grocery list </h1>
         <div style="text-align: end;">
-            <a href="http://127.0.0.1/signup">Sign Up!</a>
+            <a href="http://127.0.0.1:5500/signup.html">Sign Up!</a>
         </div>
     </div>
  
     <div class = "Groceries">
         <div class = "Milk">
-            <img src="https://pngimg.com/d/milk_PNG12732.png" width="150px" height="200px">  
+            <img src="https://pngimg.com/d/milk_PNG12732.png" width="200px" height="230px">  
             <div>
-                <h1> Milk </h1>
+                <h2> Milk </h2>
             </div>
         </div>
         <div class="Eggs">
-            <img src="https://png.pngtree.com/png-vector/20231031/ourmid/pngtree-dozen-eggs-png-image_10388588.png" width="200px" height="230px">
+            <img src="https://png.pngtree.com/png-vector/20231031/ourmid/pngtree-dozen-eggs-png-image_10388588.png" width="230px" height="230px">
             <div>
-                <h1> Eggs </h1>
+                <h2> Eggs </h2>
             </div>
         </div>
         <div class="Banana">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Banana.png/800px-Banana.png" width="200px" height="230px">
             <div>
-                <h1> Banana </h1>
+                <h2> Banana </h2>
             </div>
         </div>
         <div class="Bread">
-            <img src="https://static.vecteezy.com/system/resources/previews/028/296/840/original/toast-sliced-of-white-bread-on-transparent-background-png.png" width="200px" height="230px">
+            <img src="https://static.vecteezy.com/system/resources/previews/028/296/840/original/toast-sliced-of-white-bread-on-transparent-background-png.png" width="230px" height="230px">
             <div>
-                <h1> Bread </h1>
+                <h2> Bread </h2>
             </div>
         </div>
         <div class="Sugar">
             <img src="https://lollicupstore.com/cdn/shop/products/s1005_01.png?v=1661413916" width="200px" height="230px">
             <div>
-                <h1> Sugar </h1>
+                <h2> Sugar </h2>
             </div>
         </div>
         <div class="Flour">
             <img src="https://www.pikpng.com/pngl/b/275-2757637_free-png-flour-png-png-image-with-transparent.png" width="200px" height="230px" >
             <div>
-                <h1> Flour </h1>
+                <h2> Flour </h2>
             </div>
+        </div> 
+        <div popover id="ad">
+            <img src="https://www.simplyrecipes.com/thmb/tR-5eHAZ3lgNR6Yvu3yxdHMNpk8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Easy-Banana-Bread-LEAD-2-2-63dd39af009945d58f5bf4c2ae8d6070.jpg" width="300px">
+            <ul>
+                <li>You can make banana bread!</li>
+                <li>You can have a glass of milk!</li>
+            </ul>
         </div>
-
+        <div id="button">
+            <h2> What can you create with these ingredients?</h2>
+            <button popovertarget="ad">Click me!</button> 
+        </div>
     </div>
-    <div popover id="ad">
-        <img src="https://www.simplyrecipes.com/thmb/tR-5eHAZ3lgNR6Yvu3yxdHMNpk8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Easy-Banana-Bread-LEAD-2-2-63dd39af009945d58f5bf4c2ae8d6070.jpg" width="300px">
-        <ul>
-            <li>You can make banana bread!</li>
-            <li>You can have a glass of milk!</li>
-        </ul>
-    </div>
-    <div id="button">
-        <button popovertarget="ad">What can you create with these?</button>
-    </div>
-   
-    
 </body>
 </html>
